--- a/ops/php-fpm/Dockerfile
+++ b/ops/php-fpm/Dockerfile
@@ -2,6 +2,13 @@ FROM php:7-fpm
 
 RUN apt-get update && docker-php-ext-install mysqli pdo pdo_mysql sockets bcmath
 
+RUN apt-get update && apt-get install -y \
+        libfreetype6-dev \
+        libjpeg62-turbo-dev \
+        libpng-dev \
+    && docker-php-ext-configure gd --with-freetype --with-jpeg \
+    && docker-php-ext-install -j$(nproc) gd
+
 RUN pecl install -o -f redis \
     && rm -rf /tmp/pear \
     && docker-php-ext-enable redis \
