add variable for blackfire

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,7 +85,7 @@ services:
   blackfire:
     image: blackfire/blackfire
     environment:
-      BLACKFIRE_CLIENT_ID: ${BLACKFIRE_CLIENT_ID}
-      BLACKFIRE_CLIENT_TOKEN: ${BLACKFIRE_CLIENT_TOKEN}
-      BLACKFIRE_SERVER_ID: ${BLACKFIRE_SERVER_ID}
-      BLACKFIRE_SERVER_TOKEN: ${BLACKFIRE_SERVER_TOKEN}
+      BLACKFIRE_CLIENT_ID: "ac2fb3d6-f0a6-4baa-8775-daa59f1c2b62"
+      BLACKFIRE_CLIENT_TOKEN: "617d7d505f86047263e412d5278895804477e385b34145b64af3c73465386acb"
+      BLACKFIRE_SERVER_ID: "63ac605f-978d-4571-8f22-cf51e91ae4f7"
+      BLACKFIRE_SERVER_TOKEN: "1ad1daef6550b049a68dbf3970ffdbdf43c11650feca9e38fad68a5011bcd6a1"
